[tool.poetry]
name = "nikitasmallcock"
version = "0.1.0"
description = ""
authors = ["VladimirKhrabrov <khrabrov.v@brandsgo.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
